src/objects/Goodwill_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <description>Billing Account where this Goodwill Transaction is related to</description>
        <label>Billing Account</label>
        <referenceTo>Zuora__CustomerAccount__c</referenceTo>
        <relationshipLabel>Goodwill Transactions</relationshipLabel>
        <relationshipName>Goodwill_Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Goodwill_Amt_Change__c</fullName>
        <formula>IF( ISPICKVAL( Trans_Type__c , &apos;CR&apos;) ,  Trans_Amt__c , Trans_Amt__c * -1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goodwill Amount Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Invoice where Goodwill Amount is generated from or applied to</description>
        <label>Invoice</label>
        <referenceTo>Zuora__ZInvoice__c</referenceTo>
        <relationshipLabel>Goodwill Transactions</relationshipLabel>
        <relationshipName>Goodwill_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trans_Amt__c</fullName>
        <description>Amount of this Goodwill Transaction</description>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trans_Date__c</fullName>
        <description>Date when this Goodwill Transaction happens</description>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trans_Type__c</fullName>
        <description>Accepted Values: CR / DR
CR: New Goodwill Amount added
DR: Existing Goodwill Amount deducted</description>
        <inlineHelpText>CR: New Goodwill Amount added
DR: Existing Goodwill Amount deducted</inlineHelpText>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>CR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DR</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Goodwill Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GT-{00000000}</displayFormat>
        <label>Goodwill Transaction Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Goodwill Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>